# salmanhae

./: AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: harness.md  review.md
.codex/: hooks.json
.codex/hooks/: codex_hook_bridge.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
backend/: .project  CLAUDE.md  README.md  pom.xml
backend-ai/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend-ai/app/: __init__.py  main.py
backend-ai/app/api/: routes.py  schemas.py
backend-ai/app/clients/: llm_client.py  spring_client.py  supabase_client.py
backend-ai/app/core/: config.py  security.py
backend-ai/app/graph/: __init__.py  builder.py  state.py
backend-ai/app/graph/nodes/: classify_intent.py  generate_answer.py  legal_rag.py  price_analysis.py  property_search.py  safety_analysis.py
backend-ai/app/rag/: __init__.py  chunker.py  prompts.py  retriever.py
backend-ai/scripts/: ingest_legal_docs.py
backend-ai/tests/: test_agent_chat.py  test_health.py
docs/: 01_PRD.md  02_ARCHITECTURE.md  02_mvp_scope.md  03_ADR.md  04_UI_GUIDE.md  05_GIT_GUIDE.md  06_EXTERNAL_APIS.md  07_DOMAIN_MODEL.md  08_API_SPEC.md  09_BATCH_INGESTION.md  10_SECURITY_POLICY.md  11_ROADMAP.md  11_document_maintenance.md  12_FUTURE_EXTENSIONS.md  12_git_convention.md  13_CODEX_HARNESS.md  ARCHITECTURE.md  GIT_GUIDE.md  PRD.md  SECURITY_POLICY.md  UI_GUIDE.md
frontend/: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
scripts/: execute.py  execute_codex.py
(+48 files in other folders)
